Enums in ScrollTypes and PlatformWheelEvent should not use uint64_t storage https://bugs.webkit.org/show_bug.cgi?id=136318

Reviewed by Simon Fraser.

This regressed in a replay-related patch. Revert back to uint8_t storage size.

* platform/PlatformWheelEvent.h:
* platform/ScrollTypes.h:
* replay/WebInputs.json:


Canonical link: https://commits.webkit.org/154140@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173034 268f45cc-cd09-0410-ab3c-d52691b4dbfc